# cppFix

./: .gitignore  CMakeLists.txt  README.md  buildEnv.sh  main.cpp
3rd/elfio/: elfio.hpp  elfio_dump.hpp
demo/: hotfix_add.cpp  main  main.cpp
inc/: hotfix.h  hotfix_signal.h  pmap.h  symbol_manager.h  utils.h
patch/code/: hotfix_add_to_mul.cpp
shell/: build_patch_to_so.sh  build_send_hotfix_signal.sh
src/: hotfix.cpp  hotfix_signal.cpp  pmap.cpp  send_hotfix_signal.cpp  symbol_manager.cpp
test/: testAslr.cpp
